# OpenNote

./: .gitignore  AboutDialog.cpp  AboutDialog.h  AppDatabase.cpp  AppDatabase.h  AutoCompleter.cpp  AutoCompleter.h  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  EditorTabWidget.cpp  EditorTabWidget.h  FileTreeWidget.cpp  FileTreeWidget.h  FindReplaceDialog.cpp  FindReplaceDialog.h  FoldManager.cpp  FoldManager.h  LICENSE  Language.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  README.md  SingleInstanceController.cpp  SingleInstanceController.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  SyntaxTheme.h  build-appimage.sh  install-appimage.sh  main.cpp
